[project]
name = "wkdhash"
version = "0.1.0"
description = "Calculate WKD (Web-Key-Directory) UID Hashes for OpenGPG UIDs"
authors = [
    {name = "Gregor Vollmer",email = "git@dynamic-noise.net"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "z-base-32 (>=0.1.4,<0.2.0)"
]


[tool.poetry.scripts]
wkdhash = "wkdhash.cli_convert:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.2"

